TEST: Install optional (extra) deps on TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 
 install:
   - pip install -r devel-requirements.txt
+  - pip install -r extra-requirements.txt
   - pip install .
 
 script: make check
