TEST: configure emails for Travis CI notifications
https://docs.travis-ci.com/user/notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,8 @@ install:
 script: make check
 
 notifications:
-  email: false
+  email:
+    recipients:
+      - scott@rerobots.net
+    on_success: change
+    on_failure: always
