--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 
 install:
   - pip install pipenv
-  - pipenv install --dev
+  - pipenv install --skip-lock --dev .[extra]
 
 script: make check
 
