--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
   - "3.7"
 
 install:
-  - pip install -U pip
   - pip install pipenv
+  - pipenv run pip install pip==18.0
   - pipenv install --skip-lock --dev .[extra]
 
 script: make check
