--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py27,py34,py35,py36,py37
 
 [testenv]
-deps = responses
-    nose
-commands = nosetests
+deps = pipenv
+commands =
+    pipenv install --dev
+    nosetests
