--- a/.pylintrc
+++ b/.pylintrc
@@ -90,6 +90,7 @@ disable=print-statement,
         deprecated-sys-function,
         exception-escape,
         comprehension-escape,
+        useless-object-inheritance,
         line-too-long
 
 enable=c-extension-no-member
@@ -178,7 +179,7 @@ single-line-if-stmt=no
 
 additional-builtins=
 
-allow-global-unused-variables=no
+allow-global-unused-variables=yes
 init-import=no
 
 callbacks=cb_,
@@ -203,6 +204,7 @@ function-naming-style=snake_case
 good-names=i,
            j,
            k,
+           x,
            _,
            fd,
            fp
@@ -237,13 +239,13 @@ valid-metaclass-classmethod-first-arg=cls
 
 [DESIGN]
 
-max-args=5
-max-attributes=7
+max-args=6
+max-attributes=9
 max-bool-expr=5
 max-branches=12
 max-locals=15
 max-parents=7
-max-public-methods=20
+max-public-methods=32
 max-returns=6
 max-statements=50
 min-public-methods=2
