--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,5 @@ envlist = py27,py34,py35,py36,py37
 [testenv]
 deps = pipenv
 commands =
-    pipenv install --dev
-    nosetests
+    pipenv install --skip-lock --dev .[extra]
+    pytest
