DOC: use README as introduction page of doc

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,7 +2,8 @@
 # Copyright (C) 2018 rerobots, Inc.
 
 all:
+	cp -f ../README.rst intro.rst
 	python -m sphinx -b html . build
 
 clean:
-	rm -rf build
+	rm -rf build intro.rst
