--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,4 @@ envlist = py27,py34,py35,py36,py37
 deps = pipenv
 commands =
     pipenv install --skip-lock --dev .[extra]
-    pytest
+    make checklocal
