TEST: allow calling `make` from tox
cf. https://tox.readthedocs.io/en/latest/config.html#conf-whitelist_externals

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py27,py34,py35,py36,py37
 
 [testenv]
 deps = pipenv
+whitelist_externals = make
 commands =
     pipenv install --skip-lock --dev .[extra]
     make checklocal
