TEST: ignore lack of `from` in re-raise exceptions
pylint now warns about lack of `from` when an exception is raised from
within an `except` block. This changeset marks it as a style warning
to ignore.

After support for Python 2.7 is dropped, enable it.

* https://www.python.org/dev/peps/pep-3134/
* https://docs.python.org/3/reference/simple_stmts.html#the-raise-statement

--- a/.pylintrc
+++ b/.pylintrc
@@ -91,7 +91,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         useless-object-inheritance,
-        line-too-long
+        line-too-long,
+        raise-missing-from
 
 enable=c-extension-no-member
 
