--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "rerobots"
 dynamic = ["version"]
+requires-python = ">=3.8"
 
 [project.optional-dependencies]
 test = [
