TEST: update tox.ini; improve pyproject.toml; reorg tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,14 @@
 [tox]
-envlist = py38,py39,py310,py311,py312
+requires =
+    tox>=4
+env_list = py{38,39,310,311,312}
 
 [testenv]
-deps = pipenv
-whitelist_externals = make
+description = unit tests, not hitting the real servers
+package = wheel
+wheel_build_env = .pkg
+deps =
+    pytest
+    responses
 commands =
-    pipenv install --skip-lock --dev .[extra]
-    make checklocal
+    pytest -v --ignore=tests/realserv/
