--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
             - name: Run tests
               run: |
                 cd tests
-                pytest -v --ignore=tests/realserv/
+                pytest -v --ignore=realserv/
