--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
             - name: Install
               run: |
                 pip install .[test]
+            - name: Lint
+              run: |
+                black --check rerobots
             - name: Run tests
               run: |
                 cd tests
