--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,10 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Prepare Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v2
+              uses: actions/setup-python@v5
               with:
                   python-version: ${{ matrix.python-version }}
+                  cache: 'pip'
             - name: Install
               run: |
                 pip install .[test]
