PKG: when testing, install dependency type annotations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ test = [
     "pytest",
     "responses",
     "tox",
+    "types-requests",
+    "types-Pillow",
+    "types-paramiko",
 ]
 extra = [
     "numpy",
