CI: only lint, check types on single Python version
because these are not dynamic checks and so the particular
Python runtime used should not affect results.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,11 @@ jobs:
               run: |
                 pip install .[test]
             - name: Lint
+              if: ${{ matrix.python-version == 3.12 }}
               run: |
                 black --check rerobots
             - name: Type checking
+              if: ${{ matrix.python-version == 3.12 }}
               run: |
                 mypy rerobots
             - name: Run tests
