CI: install [extra]

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
                   cache: 'pip'
             - name: Install
               run: |
+                pip install .[extra]
                 pip install .[test]
             - name: Lint
               if: ${{ matrix.python-version == 3.12 }}
