auto-format tests, include in CI checks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,11 @@ jobs:
             - name: Lint
               if: ${{ matrix.python-version == 3.12 }}
               run: |
-                black --check rerobots
+                black --check rerobots tests
             - name: Type checking
               if: ${{ matrix.python-version == 3.12 }}
               run: |
-                mypy rerobots
+                mypy rerobots tests
             - name: Run tests
               run: |
                 cd tests
