PKG: use ruff for formatting, lint
It is very fast.
https://github.com/astral-sh/ruff
https://docs.astral.sh/ruff/

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             - name: Lint
               if: ${{ matrix.python-version == 3.12 }}
               run: |
-                black --check rerobots tests
+                ruff format --check rerobots tests
             - name: Type checking
               if: ${{ matrix.python-version == 3.12 }}
               run: |
