--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,13 @@ source = "https://github.com/rerobots/py"
 
 [project.optional-dependencies]
 test = [
-    "black",
     "coverage",
     "mypy",
     "pyflakes",
     "pylint",
     "pytest",
     "responses",
+    "ruff",
     "tox",
     "types-requests",
     "types-Pillow",
